--- a/MedicamentosBD/nbproject/project.properties
+++ b/MedicamentosBD/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MedicamentosBD
 excludes=
 file.reference.objectdb.jar=C:\\Users\\taliv\\Downloads\\objectdb-2.9.0\\objectdb-2.9.0\\bin\\objectdb.jar
+file.reference.objectdb.jar-1=..\\..\\..\\Angel\\objectdb-2.9.0\\bin\\objectdb.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.objectdb.jar}
+    ${file.reference.objectdb.jar}:\
+    ${file.reference.objectdb.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
