--- a/MedicamentosBD/nbproject/project.properties
+++ b/MedicamentosBD/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MedicamentosBD
 excludes=
+file.reference.objectdb.jar=..\\..\\..\\Angel\\objectdb-2.9.0\\bin\\objectdb.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.objectdb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
