--- a/MedicamentosBD/nbproject/project.properties
+++ b/MedicamentosBD/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/MedicamentosBD
 excludes=
 file.reference.jcalendar-1.4-bin=C:\\Users\\taliv\\Downloads\\jcalendar-1.4\\bin
 file.reference.jcalendar-1.4.jar=C:\\Users\\taliv\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\..\\..\\Angel\\Calendario\\lib\\jcalendar-1.4.jar
 file.reference.jgoodies-common-1.2.0.jar=C:\\Users\\taliv\\Downloads\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-common-1.2.0.jar-1=..\\..\\..\\Angel\\Calendario\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=C:\\Users\\taliv\\Downloads\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
+file.reference.jgoodies-looks-2.4.1.jar-1=..\\..\\..\\Angel\\Calendario\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=C:\\Users\\taliv\\Downloads\\jcalendar-1.4\\lib\\junit-4.6.jar
+file.reference.junit-4.6.jar-1=..\\..\\..\\Angel\\Calendario\\lib\\junit-4.6.jar
 file.reference.objectdb.jar=C:\\Users\\taliv\\Downloads\\objectdb-2.9.0\\objectdb-2.9.0\\bin\\objectdb.jar
 file.reference.objectdb.jar-1=..\\..\\..\\Angel\\objectdb-2.9.0\\bin\\objectdb.jar
 includes=**
@@ -49,7 +53,11 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jgoodies-common-1.2.0.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
-    ${file.reference.junit-4.6.jar}
+    ${file.reference.junit-4.6.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jgoodies-common-1.2.0.jar-1}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar-1}:\
+    ${file.reference.junit-4.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
